tests/es_declare_module/es_declare_module.exp
Error: es_declare_module.js:6
  6: (num1: string); // Error: number ~> string
      ^^^^ Cannot cast `num1` to string because number [1] is incompatible with string [2].
  References:
    6: (num1: string); // Error: number ~> string
        ^^^^ [1]: number
    6: (num1: string); // Error: number ~> string
              ^^^^^^ [2]: string

Error: es_declare_module.js:8
  8: (str1: number); // Error: string ~> number
      ^^^^ Cannot cast `str1` to number because string [1] is incompatible with number [2].
  References:
    8: (str1: number); // Error: string ~> number
        ^^^^ [1]: string
    8: (str1: number); // Error: string ~> number
              ^^^^^^ [2]: number

Error: es_declare_module.js:10
 10: (CJS_Named: number); // Error: Module ~> number
      ^^^^^^^^^ Cannot cast `CJS_Named` to number because module `CJS_Named` [1] is incompatible with number [2].
  References:
   10: (CJS_Named: number); // Error: Module ~> number
        ^^^^^^^^^ [1]: module `CJS_Named`
   10: (CJS_Named: number); // Error: Module ~> number
                   ^^^^^^ [2]: number

Error: es_declare_module.js:12
 12: import {num2} from "CJS_Clobbered"; // Error: No such export!
             ^^^^ Named import from module `CJS_Clobbered`. This module has no named export called `num2`.

Error: es_declare_module.js:15
 15: (numExport: string); // Error: number ~> string
      ^^^^^^^^^ Cannot cast `numExport` to string because number [1] is incompatible with string [2].
  References:
   15: (numExport: string); // Error: number ~> string
        ^^^^^^^^^ [1]: number
   15: (numExport: string); // Error: number ~> string
                   ^^^^^^ [2]: string

Error: es_declare_module.js:18
 18: ('asdf': numType); // Error: string ~> number
      ^^^^^^ Cannot cast string to `numType` because string [1] is incompatible with number [2].
  References:
   18: ('asdf': numType); // Error: string ~> number
        ^^^^^^ [1]: string
   18: ('asdf': numType); // Error: string ~> number
                ^^^^^^^ [2]: number

Error: es_declare_module.js:20
 20: import {strHidden} from "ES"; // Error: No such export!
             ^^^^^^^^^ Named import from module `ES`. This module has no named export called `strHidden`.

Error: es_declare_module.js:23
 23: (str3: number); // Error: string ~> number
      ^^^^ Cannot cast `str3` to number because string [1] is incompatible with number [2].
  References:
   23: (str3: number); // Error: string ~> number
        ^^^^ [1]: string
   23: (str3: number); // Error: string ~> number
              ^^^^^^ [2]: number

Error: es_declare_module.js:27
 27: (num3: string); // Error: number ~> string
      ^^^^ Cannot cast `num3` to string because number [1] is incompatible with string [2].
  References:
   27: (num3: string); // Error: number ~> string
        ^^^^ [1]: number
   27: (num3: string); // Error: number ~> string
              ^^^^^^ [2]: string

Error: es_declare_module.js:32
 32: (42: C); // Error: number ~> C
      ^^ Cannot cast number to `C` because number [1] is incompatible with `C` [2].
  References:
   32: (42: C); // Error: number ~> C
        ^^ [1]: number
   32: (42: C); // Error: number ~> C
            ^ [2]: `C`

Error: es_declare_module.js:34
 34: (42: CType); // Error: number ~> CType
      ^^ Cannot cast number to `CType` because number [1] is incompatible with `C` [2].
  References:
   34: (42: CType); // Error: number ~> CType
        ^^ [1]: number
   34: (42: CType); // Error: number ~> CType
            ^^^^^ [2]: `C`

Error: es_declare_module.js:36
 36: import {T} from "ES"; // Error: T is a type import, not a value
             ^ Named import from module `ES`. `T` is a type, but not a value. In order to import it, please use `import type`.

Error: es_declare_module.js:39
 39: ('asdf': T2); // Error: string ~> number
      ^^^^^^ Cannot cast string to `T2` because string [1] is incompatible with number [2].
  References:
   39: ('asdf': T2); // Error: string ~> number
        ^^^^^^ [1]: string
   39: ('asdf': T2); // Error: string ~> number
                ^^ [2]: number

Error: es_declare_module.js:41
 41: import {exports as nope} from "ES"; // Error: Not an export
             ^^^^^^^ Named import from module `ES`. This module has no named export called `exports`.


Found 14 errors
